--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="card">
       <div class="card-header">
-        <img src="/images/image-equilibrium.jpg" alt="img" />
+        <img src="./images/image-equilibrium.jpg" alt="img" />
       </div>
       <div class="card-body">
         <h2 class="card-body_title">Equilibrium #3429</h2>
@@ -27,11 +27,11 @@
         </p>
         <div class="card-body_detail">
           <div class="card-body_detail_price">
-            <img src="/images/icon-ethereum.svg" alt="" />
+            <img src="./images/icon-ethereum.svg" alt="" />
             <p>0.041 ETH</p>
           </div>
           <div class="card-body_detail_time">
-            <img src="/images/icon-clock.svg" alt="" />
+            <img src="./images/icon-clock.svg" alt="" />
             <p>3 days left</p>
           </div>
         </div>
@@ -39,7 +39,7 @@
         <hr />
 
         <div class="card-body_creator">
-          <img src="/images/image-avatar.png" alt="" />
+          <img src="./images/image-avatar.png" alt="" />
           <p><span> Creation of </span> Jules Wyvern</p>
         </div>
       </div>
